welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:6: error: ')' expected but integer literal found.
 	if( (a>12 && a<20) && ( b<13 || ou b>19))
                                             ^loneTeen:20: error: ')' expected but '}' found.
} 
^